--- a/curriculumVitaeFront/src/app/components/portfolio/portfolio.component.html
+++ b/curriculumVitaeFront/src/app/components/portfolio/portfolio.component.html
@@ -1,10 +1,11 @@
 <app-main-nav></app-main-nav>
-<app-home></app-home>
-
+<main id="main">
+    <app-home></app-home>
     <app-about-me></app-about-me>
     <app-experience></app-experience>
     <app-education></app-education>
     <app-skills></app-skills>
     <app-list-projects></app-list-projects>
-    <app-contact-form></app-contact-form>
-    <app-footer></app-footer>
+    <!--<app-contact-form></app-contact-form>-->
+</main>
+<app-footer></app-footer>
