--- a/curriculumVitaeFront/src/app/components/footer/footer.component.html
+++ b/curriculumVitaeFront/src/app/components/footer/footer.component.html
@@ -1,21 +1,20 @@
-<footer >
-    <div class="container" >
+  <footer>
+    <div class="container">
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
+            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
             <div class="credits">
-              <div class="socials">
-                <ul>
-                  <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                  <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                  <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                  <li><a href=""><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
-                </ul>
-              </div>
+              <!--
+              All the links in the footer should remain intact.
+              You can delete the links only if you purchased the pro version.
+              Licensing information: https://bootstrapmade.com/license/
+              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
+            -->
+              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </footer><!-- End  Footer -->
-
