--- a/curriculumVitaeFront/src/app/components/skills/skills.component.html
+++ b/curriculumVitaeFront/src/app/components/skills/skills.component.html
@@ -9,86 +9,62 @@
                     <h3 class="title-a">
                       HABILIDADES
                     </h3>
+                    <button  type="button" class="btn btn-success" style="float: right;" data-bs-toggle="modal" data-bs-target="#newskill">
+                      <i class="bi bi-plus-square"></i>
+                    </button>
                     <div class="line-mf"></div>
                   </div>
                 </div>
-              <div class="col-md-6">
-                <div class="skill-mf">
-                  <p class="title-s">Habilidades Duras</p>
-                  <span>HTML--></span>
-                  <span class="pull-right">80%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <span>CSS--></span> <span class="pull-right">60%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <span>PHP--></span> <span class="pull-right">50%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <span>JAVASCRIPT--></span> <span class="pull-right">50%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <span>ANGULAR--></span> <span class="pull-right">60%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <span>LARAVEL--></span> <span class="pull-right">60%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="col-md-6" >
+                <p class="title-s">Habilidades Duras</p>
+                <div class="skill-mf" >
+                  <div *ngFor="let skill of skills" >
+                    <div *ngIf="skill.skill_type == 'Habilidad Dura' ">
+                      <span>{{skill.skill_name}}--></span><span class="pull-right">{{skill.skill_percentage}}%</span>
+                      <div class="progress">
+                        <progress class="progress-bar" role="progressbar" style="width: 100%;" value="{{skill.skill_percentage}}" min="0" max="100"></progress>
+                      </div>
+                      <button  type="button" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#updateskill">
+                        <i class="bi bi-pencil-fill"></i>
+                      </button>
+                      <button  type="button" class="btn btn-danger"  data-bs-toggle="modal" data-bs-target="#delete">
+                        <i class="bi bi-trash"></i>
+                      </button>
+                    </div>
                   </div>
                   <p class="title-s">Idiomas</p>
-                  <span>ESPAÑOL--></span> <span class="pull-right">100%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <span>INGLES--></span> <span class="pull-right">50%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div *ngFor="let skill of skills" >
+                    <div *ngIf="skill.skill_type == 'Idioma' ">
+                      <span>{{skill.skill_name}}--></span><span class="pull-right">{{skill.skill_percentage}}%</span>
+                      <div class="progress">
+                        <progress class="progress-bar" role="progressbar" style="width: 100%;" value="{{skill.skill_percentage}}" min="0" max="100"></progress>
+                      </div>
+                      <button  type="button" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#updateskill">
+                        <i class="bi bi-pencil-fill"></i>
+                      </button>
+                      <button  type="button" class="btn btn-danger"  data-bs-toggle="modal" data-bs-target="#delete">
+                        <i class="bi bi-trash"></i>
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="skill-mf">
                     <p class="title-s">Habilidades Blandas</p>
-                    <span>Trabajo en equipo--></span> <span class="pull-right">90%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90 " aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>Liderazgo--></span> <span class="pull-right">80%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>Comunicación asertiva--></span> <span class="pull-right">95%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>Servicio al cliente--></span> <span class="pull-right">85%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>Capacidad analítica y de resolución de problemas--></span> <span class="pull-right">90%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>Atención al detalle--></span> <span class="pull-right">90%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>Deseos de aprender y estar a la vanguardia--></span> <span class="pull-right">100%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>Adaptabilidad, saber priorizar y manejo de tareas múltiples--></span> <span class="pull-right">90%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>Ética, compromiso, honestidad e integridad--></span> <span class="pull-right">100%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div *ngFor="let skill of skills" >
+                      <div *ngIf="skill.skill_type == 'Habilidad Blanda'">
+                        <span>{{skill.skill_name}}--></span><span class="pull-right">{{skill.skill_percentage}}%</span>
+                        <div class="progress">
+                          <progress class="progress-bar" role="progressbar" style="width: 100%;" value="{{skill.skill_percentage}}" min="0" max="100"></progress>
+                        </div>
+                        <button  type="button" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#updateskill">
+                          <i class="bi bi-pencil-fill"></i>
+                        </button>
+                        <button  type="button" class="btn btn-danger"  data-bs-toggle="modal" data-bs-target="#delete">
+                          <i class="bi bi-trash"></i>
+                        </button>
+                      </div>
                     </div>
                   </div>
               </div>
@@ -98,3 +74,85 @@
       </div>
     </div>
   </section><!-- End About Section -->
+
+
+
+  <!-- Modal 
+<div class="modal fade" id="newskill" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content" style="background: linear-gradient(50deg, #3b5acc  10%, #310441  90%);">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel" style="color: white;">Crear Habilidad</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" >
+        <div class="container">
+          <form >
+            <h3 style="color: white;">Nombre de la Habilidad</h3>
+            <div class="form-field">
+              <input id="skill_name" type="text" placeholder=""
+              class="form-control"  />
+            </div>
+            <h3 style="color: white;">Tipo de Habilidad</h3>
+            <div class="form-field">
+              <select name="skill_type[]" class="form-control mt-3">
+                <option value="Habilidad Dura">Habilidad Dura</option>
+                <option value="Idioma">Idioma</option>
+                <option value="Habilidad Blanda">Habilidad Blanda</option>
+            </select>
+            </div>
+            <h3 style="color: white;">Porcentaje de Habilidad</h3>
+            <div class="form-field">
+              <input id="skill_percentage" type="number" placeholder=""
+              class="form-control" />
+            </div>
+            <div class="form-field">
+              <button class="btn btn-primary" type="submit">EDITAR</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>-->
+
+
+ <!-- Modal 
+ <div class="modal fade" id="updateskill" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content" style="background: linear-gradient(50deg, #3b5acc  10%, #310441  90%);">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel" style="color: white;">Editar Habilidad</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" >
+        <div class="container">
+          <form >
+            <h3 style="color: white;">Nombre de la Habilidad</h3>
+            <div class="form-field">
+              <input id="skill_name" type="text" placeholder=""
+              class="form-control"  />
+            </div>
+            <h3 style="color: white;">Tipo de Habilidad</h3>
+            <p></p>
+            <div class="form-field">
+              <select name="skill_type[]" class="form-control mt-3">
+                <option value="Habilidad Dura">Habilidad Dura</option>
+                <option value="Idioma">Idioma</option>
+                <option value="Habilidad Blanda">Habilidad Blanda</option>
+            </select>
+            </div>
+            <h3 style="color: white;">Porcentaje de Habilidad</h3>
+            <div class="form-field">
+              <input id="skill_percentage" type="number" placeholder=""
+              class="form-control" />
+            </div>
+            <div class="form-field">
+              <button class="btn btn-primary" type="submit">EDITAR</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>-->
